# DocuChat

./: .gitignore  README.md  main.py  pyproject.toml
backend/: app.py  evaluate.py  pyproject.toml  session_manager.py
backend/rag/: data_loader.py  llm.py  search.py  vectorstore.py
frontend/: package-lock.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ChatInterface.tsx  FileUpload.tsx  MessageBubble.tsx
src/: data_loader.py  llm.py  prompt.py  search.py  vectorstore.py
